--- a/Pages/View3.razor.css
+++ b/Pages/View3.razor.css
@@ -2,6 +2,11 @@
     align-items: stretch;
     height: 100%;
 }
+.grid {
+    min-width: 50px;
+    min-height: 50px;
+    flex-shrink: 0;
+}
 .row {
     display: flex;
 }
